CHANGES
-------
Version 1.5 - In Progress
------------------------------
03/10/2021 Fixed Issue #340 related to the handling of daemonic tasks
           in a TaskGroup.   TaskGroups can now be given existing
           daemonic tasks in the constructor.  Daemonic tasks are
           correctly cancelled if a TaskGroup used as a context manager
           terminates due to an exception.
           
10/25/2020 Changed all cancellation related exceptions to inherit
           from BaseException instead of Exception.   This makes
           them play slightly better with normal exception handling
           code:

               try:
                   await some_operation()
               except Exception as err:
                   # Normal (expected) program related error
                   ...
               except CancelledError as err:
                   # Cancellation of some kind
                   ...

           This also mirrors a similar change to asyncio.CancelledError
           which now directly inherits from BaseException.

           ***POTENTIAL INCOMPATIBILITY***

           If you were using try: ... except Exception: to catch
           cancellation, that code will break. 
           
10/17/2020 Added ps() and where() commands to the monitor
           that can be used from the Curio REPL when you run
           `python -m curio`.  These can also be used to monitor
           the state of the kernel from a different thread.
           For example:

               from threading import Thread
               
               kern = Kernel()
               Thread(target=kern.run, args=[main]).start()

               >>> from curio.monitor import ps
               >>> ps(kern)
               ... displays active tasks ...

           This makes it a bit easier to have some of the monitor
           capability in an live-environment where Curio is running.

Version 1.4 - August 23, 2020
-----------------------------